# libtorch-detect

./: README.md
WithCMake/src/: CMakeLists.txt  DataProcesser.cpp  DataProcesser.h  LapNet_Detector.h  LibTorch_Detector.cpp  LibTorch_Detector.h  main.cpp
WithQt/src/: LapNet_Detector.cpp  LapNet_Detector.h  Libtorch_Detector_Qt.pro  Libtorch_Detector_Qt_zh_CN.ts  MainWindow.cpp  MainWindow.h
WithQt/src/LibTorch_Detector/: LibTorch_Detector.cpp  LibTorch_Detector.h
